- Update `.gitignore` to exclude JetBrains `.idea` folder. - Add `CODEOWNERS` file specifying `@bsels` as the maintainer. - Enhance `README.md` with detailed documentation and usage examples for the Maven plugin. - Implement `FXMLReader` for parsing FXML files, extracting imports, and processing structure.